# DjangoNullyBackendTemplate

./: README.md  blue_green_deploy.sh  crontab.j2  docker-compose.yml  docker_blue_green_deploy.sh  fabfile.py  nginx.conf  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
common/common_criteria/: cursor_criteria.py
common/common_criteria/tests/: test_cursor_criteria.py
common/common_forms/: admin_forms.py
common/common_paginations/: cursor_pagination_helpers.py
common/common_utils/: io_utils.py
config/: urls.py
config/settings/: base.py  local.py
localstack/: init-aws.sh
member/migrations/: 0003_create_admin_account.py
scripts/: set_git_hooks.sh
